# rigovo-virtual-team

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  _fix_ping.py  _patch_control_plane.py  _verify_health.py  _verify_ping.py  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts  pyproject.toml  rigour.yml  rigovo.yml  rigovo.yml.example  tsconfig.json
.claude/: launch.json  settings.local.json
.gemini/: styleguide.md
.github/workflows/: ci.yml  desktop-release.yml  publish.yml
.rigovo/backups/: 20260225_131439__src__feature.py
apps/desktop/: README.md  electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.renderer.preview.mjs
apps/desktop/resources/: icon.icns
apps/desktop/src/main/: index.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: approvals.ts  events.ts  prisma.ts
cli/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
cli/.cursor/rules/: rigour.mdc
cli/.github/workflows/: ci.yml  publish.yml
cli/docs/: AGENT_INSTRUCTIONS.md
cli/src/rigovo/: __init__.py  config.py  container.py  main.py
cli/src/rigovo/application/commands/: run_task.py
cli/src/rigovo/application/graph/nodes/: approval.py  assemble.py  classify.py  execute_agent.py  finalize.py  route_team.py  store_memory.py
cli/src/rigovo/application/master/: router.py
cli/src/rigovo/domain/interfaces/: domain_plugin.py  llm_provider.py  quality_gate.py  repositories.py
cli/src/rigovo/domain/services/: cost_calculator.py
cli/src/rigovo/domains/engineering/: __init__.py  gates.py  roles.py
cli/src/rigovo/infrastructure/: events.py
cli/src/rigovo/infrastructure/cloud/: sync_client.py
cli/src/rigovo/infrastructure/embeddings/: local_embeddings.py
cli/src/rigovo/infrastructure/filesystem/: command_runner.py  project_reader.py  tool_executor.py
cli/src/rigovo/infrastructure/llm/: anthropic_provider.py  openai_provider.py
cli/src/rigovo/infrastructure/persistence/: sqlite_audit_repo.py  sqlite_cost_repo.py  sqlite_local.py  sqlite_memory_repo.py  sqlite_task_repo.py
cli/src/rigovo/infrastructure/quality/: rigour_gate.py
cli/src/rigovo/infrastructure/terminal/: approval_prompt.py  rich_output.py
cli/tests/unit/: test_cli_commands.py
cli/tests/unit/application/: test_graph_nodes.py  test_master_services.py
cli/tests/unit/domain/: test_services.py
cli/tests/unit/infrastructure/: test_filesystem.py  test_rigour_gate.py
docs/: AGENT_INSTRUCTIONS.md  ARCH.md  PUBLISHING.md  SPEC.md
prisma/: schema.prisma
scripts/: e2e_api_flow.sh  e2e_desktop.sh  e2e_runtime_smoke.sh
src/rigovo/: config.py  config_detection.py  config_rules.py  config_schema.py  container.py  main.py
src/rigovo/api/: __init__.py  control_plane.py
src/rigovo/application/: cache_utils.py
src/rigovo/application/commands/: run_task.py
src/rigovo/application/context/: __init__.py  context_builder.py  memory_retriever.py  memory_runtime.py  project_scanner.py  rigour_supervisor.py
src/rigovo/application/graph/: agent_identity.py  builder.py  edges.py  state.py
src/rigovo/application/master/: classifier.py  deterministic_brain.py  enricher.py  evaluator.py  intent_signatures.py  router.py
src/rigovo/cli/: __init__.py  commands_data.py  commands_doctor.py  commands_info.py  commands_lifecycle.py
src/rigovo/domain/: __init__.py  _compat.py
src/rigovo/domain/entities/: __init__.py  agent.py  audit_entry.py  cost_entry.py  memory.py  quality.py  task.py  team.py  workspace.py
src/rigovo/domain/interfaces/: __init__.py  domain_plugin.py  embedding_provider.py  event_emitter.py  llm_provider.py  quality_gate.py  repositories.py
src/rigovo/domain/services/: __init__.py  behavior_hsm.py  code_knowledge_graph.py  cost_calculator.py  history_state.py  memory_ranker.py  team_assembler.py
src/rigovo/domains/engineering/: gates.py  plugin.py  roles.py  tools.py
src/rigovo/infrastructure/: events.py  logging_config.py
src/rigovo/infrastructure/cloud/: sync_client.py
src/rigovo/infrastructure/filesystem/: code_writer.py  (+3 more)
supabase/migrations/: 20260224000001_initial_schema.sql  20260224000002_rpc_functions.sql  20260224000003_rls_policies.sql  20260224000004_seed_templates.sql
tests/: conftest.py
tests/integration/: test_e2e_lifecycle_controls.py  test_e2e_lifecycle_controls_validation.py
tests/unit/: test_cli_integration.py  test_cli_lifecycle_controls.py  test_cli_p0_commands.py  test_cli_p1_commands.py  test_cli_p2_commands.py  test_config_db_backend.py  test_config_schema.py  test_config_schema_defaults.py  test_config_schema_detection_details.py  test_config_schema_detection_python.py  test_config_schema_detection_typescript.py  test_config_schema_integration.py  test_config_schema_smart_rules.py  test_config_schema_yaml.py  test_task_lifecycle_entity.py
tests/unit/api/: test_control_plane_confidence_stack.py  test_control_plane_custom_integrations.py  test_control_plane_ping.py
tests/unit/application/: test_adaptive_budgeting.py  test_context_builder.py  test_edges.py  test_graph_nodes_classify_assemble.py  test_graph_nodes_enrich.py  test_graph_nodes_execute_agent.py  test_graph_nodes_integration.py  test_graph_nodes_memory_approval.py  test_graph_nodes_quality_finalize.py  test_graph_nodes_replan.py  test_intent_signatures.py  test_langgraph_engine.py  test_new_features.py  test_project_scanner.py  test_reclassify.py  test_rigour_supervisor.py  test_run_task_replan_audit.py  test_run_task_team_selection.py  test_team_routing.py  test_verify_execution.py
tests/unit/domain/: test_behavior_hsm.py  test_code_knowledge_graph.py  test_engineering_plugin.py  test_entities.py  test_history_state.py  test_services.py
tests/unit/infrastructure/: test_dashboard.py  test_embeddings.py  test_filesystem.py  test_plugin_loader.py  test_rigour_gate.py  test_sqlite_repos.py
(+74 files in other folders)
