[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rigovo"
version = "0.1.0"
description = "Virtual Engineering Team as a Service — AI-powered multi-agent CLI for software development"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Rigovo", email = "engineering@rigovo.com" },
]
maintainers = [
    { name = "Rigovo", email = "engineering@rigovo.com" },
]

keywords = [
    "ai",
    "agents",
    "multi-agent",
    "software-engineering",
    "code-review",
    "llm",
    "devtools",
    "cli",
    "automation",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    # Orchestration
    "langgraph>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",

    # CLI & Terminal UI
    "typer[all]>=0.15,<1.0",
    "rich>=13.0,<14.0",

    # Database
    "aiosqlite>=0.20,<1.0",

    # Cloud sync
    "httpx>=0.28,<1.0",

    # Config
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]
embeddings = [
    "sentence-transformers>=3.0,<4.0",
]
groq = [
    "langchain-groq>=0.2,<1.0",
]

[project.urls]
Homepage = "https://rigovo.com"
Documentation = "https://docs.rigovo.com"
Repository = "https://github.com/rigovo/rigovo-teams"
Changelog = "https://github.com/rigovo/rigovo-teams/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/rigovo/rigovo-teams/issues"

[project.scripts]
rigovo = "rigovo.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rigovo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rigovo/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
